--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,24 @@
 asgiref==3.2.7
 astroid==2.4.1
+certifi==2020.4.5.2
+chardet==3.0.4
+colorama==0.4.3
 Django==3.0.7
 gunicorn==20.0.4
+idna==2.9
 isort==4.3.21
 lazy-object-proxy==1.4.3
 mccabe==0.6.1
 psycopg2==2.8.5
 pylint==2.5.2
 pytz==2020.1
+requests==2.23.0
 six==1.15.0
 sqlparse==0.3.1
 toml==0.10.1
 typed-ast==1.4.1
+urllib3==1.25.9
+virtualenv==16.7.9
+virtualenvwrapper-win==1.2.5
 whitenoise==5.1.0
 wrapt==1.12.1
